Update es-ES.json to 6th ed.

--- a/src/assets/i18n/es-ES.json
+++ b/src/assets/i18n/es-ES.json
@@ -1,7 +1,7 @@
 {
   "App": {
-    "NavTitle": "Reglas y Facciones (5ª Ed.USA)",
-    "NavTitleShort": "Reglas (5ª Ed.USA)",
+    "NavTitle": "Reglas y Facciones (6ª Ed.USA)",
+    "NavTitleShort": "Reglas (6ª Ed.USA)",
     "RootPrefix": "La ley de",
     "SearchPlaceholder": "Buscar reglas",
     "Titles": {
@@ -9,9 +9,9 @@
       "FAQ": "Preguntas Frecuentes",
       "Reach": "Calculadora de Alcance y Selección de Facciones",
       "Map": "Generador de Mapa",
-      "Random": "Random Setup",
-      "DraftPlusOne": "+1 Draft",
-      "AdSet": "Advanced Setup"
+      "Random": "Preparación Aleatoria",
+      "DraftPlusOne": "Draft +1",
+      "AdSet": "Preparación Avanzada"
     }
   },
   "Modal": {
@@ -29,11 +29,11 @@
       "CloseButton": "Cerrar",
       "Choose": "Elegir nuevas Facciones",
       "DraftPlusOne": "Draft +1",
-      "Error": "Unable to select factions; please adjust selections and try again.",
+      "Error": "Imposible seleccionar facciones, por favor cambia los ajustes y prueba otra vez.",
       "Factions": {
         "Marquise de Cat": "El Marquesado",
-        "Lord of the Hundreds": "Lord of the Hundreds",
-        "Keepers in Iron": "Keepers in Iron",
+        "Lord of the Hundreds": "El Señor de los Cientos",
+        "Keepers in Iron": "Los Guardianes de Hierro",
         "Underground Duchy": "El Ducado Subterráneo",
         "Eyrie Dynasties": "El Nido de Águilas",
         "Vagabond (#1)": "Vagabundo (#1)",
@@ -45,8 +45,8 @@
       },
       "FactionsShort": {
         "Marquise": "El Marquesado",
-        "Hundreds": "Hundreds",
-        "Keepers": "Keepers",
+        "Hundreds": "Los Cientos",
+        "Keepers": "Los Guardianes",
         "Duchy": "El Ducado",
         "Eyrie": "El Nido",
         "Vagabond #1": "Vagabundo #1",
@@ -94,76 +94,76 @@
         }
       },
       "Adset": {
-        "Random": "Random",
-        "Random1": "Random (1)",
-        "Random2": "Random (2)",
-        "Generate": "Generate",
-        "None": "None",
-        "Waiting": "Waiting for random generation...",
-        "Players": "Players",
+        "Random": "Aleatorio",
+        "Random1": "Aleatorio (1)",
+        "Random2": "Aleatorio (2)",
+        "Generate": "Generar",
+        "None": "Ninguno",
+        "Waiting": "Esperando generación aleatoria...",
+        "Players": "Jugadores",
         "Choices": {
-          "Map": "Map Choice",
-          "Deck": "Deck Choice",
-          "Players": "Player Count",
-          "Landmarks": "Landmarks",
-          "Hirelings": "Valid Hirelings",
-          "Factions": "Valid Factions",
-          "RemindDrawFive": "Reminder: Deal 5 cards to each player."
+          "Map": "Elección de Mapa",
+          "Deck": "Elección de Mazo",
+          "Players": "Número de Jugadores",
+          "Landmarks": "Lugares Míticos",
+          "Hirelings": "Secuaces Válidos",
+          "Factions": "Facciones Válidas",
+          "RemindDrawFive": "Recuerda: Reparte 5 cartas a cada jugador."
         },
         "Deck": {
-          "Standard": "Standard Deck",
-          "EP": "Exiles & Partisans"
+          "Standard": "Mazo Básico",
+          "EP": "Exiliados y Partisanos"
         },
         "Landmarks": {
-          "ElderTreetop": "Elder Treetop",
-          "LostCity": "Lost City",
-          "BlackMarket": "Black Market",
-          "LegendaryForge": "Legendary Forge",
-          "TheFerry": "The Ferry",
-          "TheTower": "The Tower"
+          "ElderTreetop": "La Copa del Árbol Ancestral",
+          "LostCity": "La Ciudad Perdida",
+          "BlackMarket": "El Mercado Negro",
+          "LegendaryForge": "La Forja Legendaria",
+          "TheFerry": "El Ferry",
+          "TheTower": "La Torre"
         },
         "Hirelings": {
-          "Spring Uprising (R)": "Spring Uprising (R)",
-          "Forest Patrol (R)": "Forest Patrol (R)",
-          "Last Dynasty (R)": "Last Dynasty (R)",
-          "The Exile (R)": "The Exile (R)",
-          "Popular Band (R)": "Popular Band (R)",
-          "Furious Protector (R)": "Furious Protector (R)",
-          "Highway Bandits (R)": "Highway Bandits (R)",
-          "Riverfolk Flotilla (R)": "Riverfolk Flotilla (R)",
-          "Warm Sun Prophets (R)": "Warm Sun Prophets (R)",
-          "Sunward Expedition (R)": "Sunward Expedition (R)",
-          "Corvid Spies (R)": "Corvid Spies (R)",
-          "Flame Bearers (R)": "Flame Bearers (R)",
-          "Vault Keepers (R)": "Vault Keepers (R)",
-          "Rabbit Scouts (D)": "Rabbit Scouts (D)",
-          "Feline Physicians (D)": "Feline Physicians (D)",
-          "Bluebird Nobles (D)": "Bluebird Nobles (D)",
-          "The Brigand (D)": "The Brigand (D)",
-          "Street Band (D)": "Street Band (D)",
-          "Stoic Protector (D)": "Stoic Protector (D)",
-          "Bandit Gangs (D)": "Bandit Gangs (D)",
-          "Otter Divers (D)": "Otter Divers (D)",
-          "Lizard Envoys (D)": "Lizard Envoys (D)",
-          "Mole Artisans (D)": "Mole Artisans (D)",
-          "Raven Sentries (D)": "Raven Sentries (D)",
-          "Rat Smugglers (D)": "Rat Smugglers (D)",
-          "Badger Bodyguards (D)": "Badger Bodyguards (D)"
+          "Spring Uprising (R)": "Alzamiento Primaveral",
+          "Forest Patrol (R)": "Patrulla Forestal",
+          "Last Dynasty (R)": "Última Dinastía",
+          "The Exile (R)": "El Exiliado",
+          "Popular Band (R)": "Banda Popular",
+          "Furious Protector (R)": "Protector Furioso",
+          "Highway Bandits (R)": "Salteadores de Caminos",
+          "Riverfolk Flotilla (R)": "Flotilla del Río",
+          "Warm Sun Prophets (R)": "Profetas del Cálido Sol",
+          "Sunward Expedition (R)": "Expedición hacia el Sol",
+          "Corvid Spies (R)": "Espías Córvidos",
+          "Flame Bearers (R)": "Portadores de Llamas",
+          "Vault Keepers (R)": "Guardianes de las Cámaras",
+          "Rabbit Scouts (D)": "Conejos Exploradores (D)",
+          "Feline Physicians (D)": "Médicos Felinos (D)",
+          "Bluebird Nobles (D)": "Nobles Azulejos (D)",
+          "The Brigand (D)": "El Forajido (D)",
+          "Street Band (D)": "Banda Callejera (D)",
+          "Stoic Protector (D)": "Protector Estoico (D)",
+          "Bandit Gangs (D)": "Cuadrillas de Bandidos (D)",
+          "Otter Divers (D)": "Nutrias Buzo (D)",
+          "Lizard Envoys (D)": "Emisarios Reptilianos (D)",
+          "Mole Artisans (D)": "Topos Artesanos (D)",
+          "Raven Sentries (D)": "Cuervos Centinelas (D)",
+          "Rat Smugglers (D)": "Ratas Contrabandistas (D)",
+          "Badger Bodyguards (D)": "Tejones Guardaespaldas (D)"
         },
 		"FormattedHirelings": {
-          "Spring Uprising (R) / Rabbit Scouts (D)": "Spring Uprising (R) / Rabbit Scouts (D)",
-          "Forest Patrol (R) / Feline Physicians (D)": "Forest Patrol (R) / Feline Physicians (D)",
-          "Last Dynasty (R) / Bluebird Nobles (D)": "Last Dynasty (R) / Bluebird Nobles (D)",
-          "The Exile (R) / The Brigand (D)": "The Exile (R) / The Brigand (D)",
-          "Popular Band (R) / Street Band (D)": "Popular Band (R) / Street Band (D)",
-          "Furious Protector (R) / Stoic Protector (D)": "Furious Protector (R) / Stoic Protector (D)",
-          "Highway Bandits (R) / Bandit Gangs (D)": "Highway Bandits (R) / Bandit Gangs (D)",
-          "Riverfolk Flotilla (R) / Otter Divers (D)": "Riverfolk Flotilla (R) / Otter Divers (D)",
-          "Warm Sun Prophets (R) / Lizard Envoys (D)": "Warm Sun Prophets (R) / Lizard Envoys (D)",
-          "Sunward Expedition (R) / Mole Artisans (D)": "Sunward Expedition (R) / Mole Artisans (D)",
-          "Corvid Spies (R) / Raven Sentries (D)": "Corvid Spies (R) / Raven Sentries (D)",
-          "Flame Bearers (R) / Rat Smugglers (D)": "Flame Bearers (R) / Rat Smugglers (D)",
-          "Vault Keepers (R) / Badger Bodyguards (D)": "Vault Keepers (R) / Badger Bodyguards (D)"
+          "Spring Uprising (R) / Rabbit Scouts (D)": "Alzamiento Primaveral / Conejos Exploradores (D)",
+          "Forest Patrol (R) / Feline Physicians (D)": "Patrulla Forestal / Médicos Felinos (D)",
+          "Last Dynasty (R) / Bluebird Nobles (D)": "Última Dinastía / Nobles Azulejos (D)",
+          "The Exile (R) / The Brigand (D)": "El Exiliado / El Forajido (D)",
+          "Popular Band (R) / Street Band (D)": "Banda Popular / Banda Callejera (D)",
+          "Furious Protector (R) / Stoic Protector (D)": "Protector Furioso / Protector Estoico (D)",
+          "Highway Bandits (R) / Bandit Gangs (D)": "Salteadores de Caminos / Cuadrillas de Bandidos (D)",
+          "Riverfolk Flotilla (R) / Otter Divers (D)": "Flotilla del Río / Nutrias Buzo (D)",
+          "Warm Sun Prophets (R) / Lizard Envoys (D)": "Profetas del Cálido Sol / Emisarios Reptilianos (D)",
+          "Sunward Expedition (R) / Mole Artisans (D)": "Expedición hacia el Sol / Topos Artesanos (D)",
+          "Corvid Spies (R) / Raven Sentries (D)": "Espías Córvidos / Cuervos Centinelas (D)",
+          "Flame Bearers (R) / Rat Smugglers (D)": "Portadores de Llamas / Ratas Contrabandistas (D)",
+          "Vault Keepers (R) / Badger Bodyguards (D)": "Guardianes de las Cámaras / Tejones Guardaespaldas (D)"
       }
       }
     },
